<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".features.expenses.ui.view.activities.NewExpenseActivity">

    <TextView
      android:id="@+id/date_textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:text="@string/expense_date_title"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/date_edittext"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/expense_date_hint"
      android:inputType="date"
      app:layout_constraintStart_toStartOf="@+id/date_textView"
      app:layout_constraintTop_toBottomOf="@+id/date_textView"
      android:autofillHints="" />

    <TextView
      android:id="@+id/name_textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/expense_name_title"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/date_edittext"
      app:layout_constraintTop_toBottomOf="@+id/date_edittext" />

    <EditText
      android:id="@+id/name_editText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/name_expense_hint"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="@+id/name_textView"
      app:layout_constraintTop_toBottomOf="@+id/name_textView"
      android:autofillHints="" />

    <TextView
      android:id="@+id/value_textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/expense_value_title"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/name_editText"
      app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <EditText
      android:id="@+id/value_editText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/expense_value_hint"
      android:inputType="numberDecimal"
      app:layout_constraintStart_toStartOf="@+id/value_textView"
      app:layout_constraintTop_toBottomOf="@+id/value_textView"
      android:autofillHints="" />

    <Button
      android:id="@+id/save_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="24dp"
      android:text="@string/save_expense_button"
      android:background="@drawable/rounded_button"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/value_editText" />
</android.support.constraint.ConstraintLayout>