<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/expense_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="01/03" />

    <TextView
        android:id="@+id/expense_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="@+id/expense_item_date"
        app:layout_constraintEnd_toStartOf="@+id/expense_item_value"
        app:layout_constraintStart_toEndOf="@+id/expense_item_date"
        app:layout_constraintTop_toTopOf="@+id/expense_item_date"
        tools:text="2 entradas de cine" />

    <TextView
        android:id="@+id/expense_item_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/expense_item_name"
        app:layout_constraintEnd_toStartOf="@+id/expense_item_value_type"
        app:layout_constraintTop_toTopOf="@+id/expense_item_name"
        tools:text="30" />

    <TextView
        android:id="@+id/expense_item_value_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/expense_item_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expense_item_value"
        tools:text="€" />
</android.support.constraint.ConstraintLayout>